Dockerized spring boot app